--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
   <nav class="navbar">
    <div class="nav-container">
     <div class="logo">
-        <img src="RMC-1.png" alt="RMUTT Math Competition 2025 Logo">
+        <img src="bb-68.png" alt="RMUTT Math Competition 2025 Logo">
     </div>
     <ul class="nav-menu">
      <!-- data-page ชี้ไปยัง <main id="..."> ของแต่ละหน้า -->
