--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
   <nav class="navbar">
    <div class="nav-container">
     <div class="logo">
-        <img src="bb-68.png" alt="RMUTT Math Competition 2025 Logo">
+        <img src="GG.png" alt="RMUTT Math Competition 2025 Logo">
     </div>
     <ul class="nav-menu">
      <!-- data-page ชี้ไปยัง <main id="..."> ของแต่ละหน้า -->
@@ -1010,7 +1010,7 @@
             <div class="text-indigo-600 mr-4 mt-1">📞</div>
             <div>
               <h4 class="font-semibold">โทรศัพท์</h4>
-              <p class="text-gray-600">02-549-3000 ต่อ 3456</p>
+              <p class="text-gray-600">02-5494173</p>
             </div>
           </div>
 
@@ -1018,7 +1018,7 @@
             <div class="text-indigo-600 mr-4 mt-1">📧</div>
             <div>
               <h4 class="font-semibold">อีเมล</h4>
-              <p class="text-gray-600">mathcomp@rmutt.ac.th</p>
+              <p class="text-gray-600">rmutt.appliedmath@gmail.com</p>
             </div>
           </div>
 
@@ -1110,15 +1110,15 @@
             <h3 class="text-lg font-semibold mb-4">ลิงก์ที่เป็นประโยชน์</h3>
             <ul class="space-y-2 text-blue-200">
               <li><a href="#" class="hover:text-white transition duration-300">เว็บไซต์ RMUTT</a></li>
-              <li><a href="#" class="hover:text-white transition duration-300">คณะวิทยาศาสตร์</a></li>
-              <li><a href="#" class="hover:text-white transition duration-300">ข่าวสารและกิจกรรม</a></li>
+              <li><a href="https://sci.rmutt.ac.th" class="hover:text-white transition duration-300">คณะวิทยาศาสตร์</a></li>
+              <li><a href="https://www.facebook.com/rmutt.AppliedMath" class="hover:text-white transition duration-300">ข่าวสารและกิจกรรม</a></li>
             </ul>
           </div>
           <div>
             <h3 class="text-lg font-semibold mb-4">ติดตามเรา</h3>
             <div class="flex space-x-4">
               <a href="#" class="text-blue-200 hover:text-white transition duration-300">📘 Facebook</a>
-              <a href="#" class="text-blue-200 hover:text-white transition duration-300">📷 Instagram</a>
+              <a href="https://www.facebook.com/rmutt.AppliedMath" class="text-blue-200 hover:text-white transition duration-300">📷 Instagram</a>
               <a href="#" class="text-blue-200 hover:text-white transition duration-300">🐦 Twitter</a>
             </div>
           </div>
