--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
     <!-- ฝั่งภาพ (การ์ดใบเกียรติบัตร + รูปทรงตกแต่ง) -->
     <div class="hero-visual">
-        <img src="B.png" alt="ใบเกียรติบัตร RMUTT" class="certificate-image">
+        <img src="P.png" alt="ใบเกียรติบัตร RMUTT" class="certificate-image">
         <div class="geometric-shapes">
           <div class="shape shape-1"></div>
           <div class="shape shape-2"></div>
@@ -527,7 +527,7 @@
 
       <div class="cta-links">
         <a href="RMC2025.pdf" target="_blank">ดูรายละเอียดของโครงการ</a>
-        <a href="RCM25.pdf" target="_blank">หนังสือเชิญชวนเข้าร่วมสอบแข่งขัน RMC2025</a>
+        <a href="RCM25-use.pdf" target="_blank">หนังสือเชิญชวนเข้าร่วมสอบแข่งขัน RMC2025</a>
       </div>
     </section>
   </div>
