--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
     <!-- ฝั่งภาพ (การ์ดใบเกียรติบัตร + รูปทรงตกแต่ง) -->
     <div class="hero-visual">
-        <img src="P.png" alt="ใบเกียรติบัตร RMUTT" class="certificate-image">
+        <img src="PP.png" alt="ใบเกียรติบัตร RMUTT" class="certificate-image">
         <div class="geometric-shapes">
           <div class="shape shape-1"></div>
           <div class="shape shape-2"></div>
